--- a/public/partials/bwr-app1/bwr-app1-pt1.html
+++ b/public/partials/bwr-app1/bwr-app1-pt1.html
@@ -21,7 +21,7 @@
         Hey! You're not Sandeep... (unless you are)
       </p>
       
-      <div ng-messages-include="my-custom-messages.html"></div>
+      <div ng-messages-include="partials/my-custom-messages.html"></div>
     </div>
   </div>
   
@@ -43,7 +43,7 @@
         Minimum of 2 characters
       </p>
       
-      <div ng-messages-include="my-custom-messages.html"></div>
+      <div ng-messages-include="partials/my-custom-messages.html"></div>
     </div>
   </div>
   
@@ -64,7 +64,7 @@
         Invalid email
       </p>
       
-      <div ng-messages-include="my-custom-messages.html"></div>
+      <div ng-messages-include="partials/my-custom-messages.html"></div>
     </div>
   </div>
   
@@ -90,7 +90,7 @@
         Invalid password
       </p>
       
-      <div ng-messages-include="my-custom-messages.html"></div>
+      <div ng-messages-include="partials/my-custom-messages.html"></div>
     </div>
     
     <div class="help-block" ng-show="cbl.passphrase.hasFocus">
