--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,5 @@
+.center {text-align: center;}
+
 h1 {
     margin-bottom: 1em;
 }
@@ -24,3 +26,12 @@ h1 {
     font-weight: normal;
     display: inline;
 }
+
+.loader {
+  padding: 2em 0;
+}
+
+
+/* angular info */
+code {display: block; margin: 1em 0;}
+pre {margin-bottom: 0;}
