--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,8 @@
+body {
+  background: #D6D3CE;
+  color: #333;
+}
+
 .center {text-align: center;}
 
 h1 {
@@ -30,6 +35,8 @@ h1 {
 .loader {
   padding: 2em 0;
 }
+
+#preload {width:0; height:0; overflow:hidden;}
 
 
 /* angular info */
