--- a/js/components/form/form-buttons-tmpl.html
+++ b/js/components/form/form-buttons-tmpl.html
@@ -1,7 +1,7 @@
 <button type="button" class="btn btn-default"
     ng-click="backwardCb()"
-    ng-hide="currentStep === 1">Prev Step</button>
+    ng-hide="currentStep === 1">Back</button>
 
 <button type="button" class="btn btn-default submit-button"
     ng-click="forwardCb()"
-    ng-disabled="!currentForm.$valid || currentStep === totalSteps">Next Step</button>
+    ng-disabled="!currentForm.$valid || currentStep === totalSteps">Continue</button>
