--- a/public/partials/bwr-app1/bwr-app1-pt2.html
+++ b/public/partials/bwr-app1/bwr-app1-pt2.html
@@ -13,7 +13,7 @@
       ng-minlength="2">
       
     <div ng-messages="cbl.another1.$error" ng-show="cbl.another1.$touched">
-      <div ng-messages-include="partials/my-custom-messages.html"></div>
+      <div ng-messages-include="error-messages"></div>
     </div>
   </div>
   
@@ -31,7 +31,7 @@
       ng-minlength="2">
       
     <div ng-messages="cbl.another2.$error" ng-show="cbl.another2.$touched">
-      <div ng-messages-include="partials/my-custom-messages.html"></div>
+      <div ng-messages-include="error-messages"></div>
     </div>
   </div>
   
