--- a/public/partials/layout/header.html
+++ b/public/partials/layout/header.html
@@ -1,3 +1,22 @@
+<!doctype html>
+<html ng-app="app" ng-controller="BwrApp1Ctrl as vm">
+<head>
+	<meta charset="UTF-8">
+
+	<title>Origination Demo</title>
+
+	<!-- vendor styles -->
+	<!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"> -->
+	<link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.8/font-awesome-animation.min.css" rel="stylesheet">
+
+	<!-- app styles -->
+	<link rel="stylesheet" href="assets/css/current-site/old-style.css" />
+	<link rel="stylesheet" href="assets/css/current-site/pages.css" />
+	<link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
+
 <div class="header">
 	<nav class="cbl_navbar" role="navigation">
 		<div class="container">
@@ -7,3 +26,7 @@
 		</div>
 	</nav>
 </div>
+
+<div class="container">
+		<div class="row">
+			<div id="app-container" class="col-sm-8 col-center">
